# cgdct.moe

./: .JuliaFormatter.toml  .editorconfig  .envrc  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  .vnurc  404.html  404.md  CNAME  Gemfile  Manifest.toml  Project.toml  _config.yml  about.md  card.html  config.md  feed.xml  flake.nix  index.html  index.md  keybase.txt  news.md  node-packages.nix  package-lock.json  package.json  publications.md  publish.sh  pyproject.toml  robots.txt  sitemap.xml  test.html  utils.jl
.well-known/: security.txt
_assets/: publications.json
_css/: franklin.css  main.css
_css/root/: card.css  index.css  news.css  publications.css
_includes/: footer.html  header.html
_layout/: head.html  header.html  page_foot.html  tag.html
_posts/: 2018-08-23-welcome-to-jekyll.markdown  2019-04-13-first-actual-post.md  2020-12-16-far.md  2021-02-21-email.md  2021-03-22-signal-safety-number.md  2021-10-27-courses.md
assets/: publications.json
assets/misc/: A99DD60E.asc  EA6E27948C7DBF5D0DF085A10FBC2E3BA99DD60E.asc
assets/scripts/: generate_results.jl
blog/: 2020-12-16-far.md  2021-11-24-mal-style.md  algorithm-library.md  far.md  index.html  index.md  misc-math.md  multiplicative-additive.md  quotes.md  tomato-egg-noodle.md
blog/2020-12-16-far/: index.html
card/: index.html
css/: highlight.css  main.css  tag.css
news/: index.html
projects/: cholesky.md  index.html  index.md
publications/: index.html
src/: bib2md  inline-style  last-updated  last-updated.json  postprocess
utils/: franklin.jl  katex.jl
(+54 files in other folders)
