[tool.poetry]
name = "cgdct-moe"
version = "0.1.0"
description = "Personal website"
authors = ["Stephen Huan <stephen03.huan@gmail.com>"]
readme = "README.md"
packages = [{include = "cgdct"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 79

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
